Emit PaletteChanged when setting colors from look and feel package

Summary:
Fixes updating palette in running applications.

BUG: 359924

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: graesslin, plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1045